# kubefront

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
Vibecoding/: azure-aks-instructions.md  backend-frontend-split.md  instructions.md
crates/kube-core/: Cargo.toml
crates/kube-core/src/: dto.rs  error.rs  lib.rs  local.rs  logstream.rs  manager.rs  store.rs
crates/kubefront-backend/: Cargo.toml  backend.toml.example
crates/kubefront-backend/src/: config.rs  error.rs  main.rs  pool.rs  routes.rs  sse.rs
scripts/: README.md  _cargo-env.ps1  build-release.ps1  build-release.sh  build-testrun.ps1  build.ps1  run.ps1  run.sh  set-version.mjs
src/: App.tsx  api.ts  app.rs  geo.ts  main.rs  state.rs  styles.css  types.ts  views.ts  world-atlas.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: azure.rs  commands.rs  conn.rs  lib.rs  main.rs  remote.rs  state.rs  terminal.rs
src-tauri/src/k8s/: manager.rs  mod.rs  store.rs
src/components/: AksWizard.tsx  ConfigMapEditor.tsx  ConfirmDialog.tsx  ConnectionEditor.tsx  CopyButton.tsx  DetailPanel.tsx  LogWindow.tsx  ManifestViewer.tsx  ResourceTable.tsx  Sidebar.tsx  StatusBar.tsx  TerminalWindow.tsx  TextViewModal.tsx  TopBar.tsx  WorldMap.tsx
src/k8s/: manager.rs  mod.rs  resources.rs  tasks.rs
src/ui/: components.rs  mod.rs  theme.rs
src/views/: Clusters.tsx  Dashboard.tsx  Logging.tsx  Monitoring.tsx  Nodes.tsx  Pods.tsx  Settings.tsx  TableView.tsx
