[package]
name = "kube-front"
version = "0.1.0"
edition = "2021"
authors = ["KubeFront Contributors"]
description = "A modern, pure-Rust desktop frontend for K3S and Kubernetes clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/kube-front"
keywords = ["kubernetes", "k3s", "kubeconfig", "egui", "desktop"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# GUI
eframe = { version = "0.34", features = ["persistence"] }
egui = "0.34"
egui_extras = "0.34"

# Kubernetes
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls", "runtime", "ring"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Async runtime & channels
tokio = { version = "1.45", features = ["rt-multi-thread", "time", "sync", "macros"] }

# Native dialogs
rfd = "0.15"

# Time & formatting
chrono = { version = "0.4", features = ["serde"] }

# Serialization (for persistence + any raw views)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utils
home = "0.5"
anyhow = "1.0"
thiserror = "2.0"
futures-util = { version = "0.3", features = ["std"] }

# Future nice-to-haves (commented until needed)
# egui_inbox = "0.4"
# directories = "5.0"
