[workspace]
resolver = "2"
members = ["crates/kube-core", "crates/kubefront-backend", "src-tauri"]

# Single source of truth for dependency versions across the desktop app, the
# shared kube-core crate, and the headless backend server. Members opt in with
# `dep = { workspace = true }` and add per-crate features as needed.
[workspace.dependencies]
# Kubernetes — TLS backend is OpenSSL (not rustls). rustls/webpki reject the v1
# client certs some k3s/older clusters issue; OpenSSL accepts them, matching
# kubectl. See crates/kube-core for the client logic.
kube = { version = "3.1", default-features = false, features = ["client", "openssl-tls", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Async runtime & streams
tokio = { version = "1.45", features = ["rt-multi-thread", "time", "sync", "macros"] }
futures-util = { version = "0.3", features = ["std"] }
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time, errors, logging, utils
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
home = "0.5"
directories = "5.0"

# Force a vendored (statically-linked) OpenSSL so binaries are self-contained —
# no system libssl to ship. `vendored` is a unifying feature: enabling it in any
# crate makes openssl-sys build vendored for the whole graph. Build prereqs: a C
# compiler + Perl everywhere, plus NASM on Windows.
openssl = { version = "0.10", features = ["vendored"] }

# Backend server (kubefront-backend only)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }

# Desktop ↔ backend transport (src-tauri only). native-tls-vendored reuses the
# SAME vendored OpenSSL as kube, keeping ONE TLS stack in the desktop binary.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls-vendored"] }
