[package]
name = "kube-front"
version = "0.1.0"
edition = "2021"
authors = ["KubeFront Contributors"]
description = "A modern, pure-Rust desktop frontend for K3S and Kubernetes clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bartbeecoders/kubefront"
keywords = ["kubernetes", "k3s", "kubeconfig", "tauri", "desktop"]
categories = ["command-line-utilities", "visualization"]

[lib]
# The library that holds the Tauri app + commands. The `main.rs` binary just calls into it.
name = "kube_front_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (native WebView shell + IPC)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Kubernetes
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls", "runtime", "ring"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Async runtime & channels
tokio = { version = "1.45", features = ["rt-multi-thread", "time", "sync", "macros"] }

# Time & formatting
chrono = { version = "0.4", features = ["serde"] }

# Serialization (IPC + persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utils
home = "0.5"
anyhow = "1.0"
thiserror = "2.0"
futures-util = { version = "0.3", features = ["std"] }
directories = "5.0"

# Direct rustls to reliably install the ring CryptoProvider (required for rustls 0.23+ when used via kube).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
