[package]
name = "kube-front"
version = "0.2.3"
edition = "2021"
authors = ["KubeFront Contributors"]
description = "A modern, pure-Rust desktop frontend for K3S and Kubernetes clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bartbeecoders/kubefront"
keywords = ["kubernetes", "k3s", "kubeconfig", "tauri", "desktop"]
categories = ["command-line-utilities", "visualization"]

[lib]
# The library that holds the Tauri app + commands. The `main.rs` binary just calls into it.
name = "kube_front_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (native WebView shell + IPC)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Kubernetes
# TLS backend: OpenSSL (not rustls). rustls/webpki accept only X.509 v3 certs and
# reject the v1 client certs that some k3s / older clusters issue with
# `UnsupportedCertVersion`; OpenSSL accepts them, matching kubectl's behaviour.
kube = { version = "3.1", default-features = false, features = ["client", "openssl-tls", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Async runtime & channels
tokio = { version = "1.45", features = ["rt-multi-thread", "time", "sync", "macros"] }

# Time & formatting
chrono = { version = "0.4", features = ["serde"] }

# Serialization (IPC + persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Utils
home = "0.5"
anyhow = "1.0"
thiserror = "2.0"
futures-util = { version = "0.3", features = ["std"] }
directories = "5.0"

# Force a vendored (statically-linked) OpenSSL so release installers are
# self-contained — no system libssl / OpenSSL DLL to ship. kube's `openssl-tls`
# pulls openssl in transitively; declaring it here enables the `vendored` feature.
# Build prereqs: a C compiler + Perl everywhere, plus NASM on Windows.
openssl = { version = "0.10", features = ["vendored"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
