[package]
name = "kube-front"
version = "0.5.0"
edition = "2021"
authors = ["KubeFront Contributors"]
description = "A modern, pure-Rust desktop frontend for K3S and Kubernetes clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bartbeecoders/kubefront"
keywords = ["kubernetes", "k3s", "kubeconfig", "tauri", "desktop"]
categories = ["command-line-utilities", "visualization"]

[lib]
# The library that holds the Tauri app + commands. The `main.rs` binary just calls into it.
name = "kube_front_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (native WebView shell + IPC)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Shared Kubernetes logic + DTOs (LocalKube, projections, log_stream, errors).
kubefront-core = { path = "../crates/kube-core" }

# Desktop → backend transport (RemoteKube). native-tls-vendored reuses the same
# vendored OpenSSL as kube, keeping ONE TLS stack in the binary.
reqwest = { workspace = true }

# Kubernetes — still used directly by the Direct-mode `cluster_summary`/`connect`
# commands (short-lived clients + kubeconfig types). TLS is OpenSSL (see below).
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async runtime & channels. `process` (added on top of the workspace features) is
# needed by src/azure.rs to shell out to the `az`/`kubelogin` CLIs for AKS import.
tokio = { workspace = true, features = ["process"] }

# Time & formatting
chrono = { workspace = true }

# Serialization (IPC + persistence)
serde = { workspace = true }
serde_json = { workspace = true }
# Serialize a scoped kubeconfig (current-context pinned) for the embedded
# terminal so kubectl in the shell targets exactly the active cluster.
serde_yaml = "0.9"

# Embedded interactive terminal: a real cross-platform PTY (the shell runs
# under it, so `kubectl exec -it`, watch, etc. work).
portable-pty = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
directories = { workspace = true }

# Force a vendored (statically-linked) OpenSSL so release installers are
# self-contained — no system libssl / OpenSSL DLL to ship. kube's `openssl-tls`
# pulls openssl in transitively; declaring it here enables the `vendored` feature.
# Build prereqs: a C compiler + Perl everywhere, plus NASM on Windows.
openssl = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
